--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link
          rel="icon"
          type="image/svg+xml"
-         href="/vite.svg"
+         href="/image.png"
       />
       <meta
          name="viewport"
@@ -17,7 +17,7 @@
          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
          crossorigin="anonymous"
       />
-      <title>Vite + React</title>
+      <title>indigo travel</title>
    </head>
    <body>
       <div id="root"></div>
