--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
          crossorigin="anonymous"
       />
+      <link
+         rel="stylesheet"
+         href="https://unpkg.com/aos@next/dist/aos.css"
+      />
       <title>indigo travel</title>
    </head>
    <body>
@@ -30,5 +34,9 @@
          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
          crossorigin="anonymous"
       ></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+         AOS.init();
+      </script>
    </body>
 </html>
